# DeepLearning-AI-Courses

./: .gitignore  DEVELOPER_GUIDE.md  README.md
acp-agent-communication-protocol/: .env.example  1_lab1.ipynb  README.md  crew_agent_client.py  crew_agent_server.py  main.py  pyproject.toml
acp-agent-communication-protocol/2_lab2/: client.py
acp-agent-communication-protocol/3_lab3/: client.py  notebook.ipynb  smolagents_server.py
acp-agent-communication-protocol/4_lab4/: client.py  hospital_server.py
acp-agent-communication-protocol/5_lab5/: README.md  server.py
acp-agent-communication-protocol/sidebars/: lab_trace_langfuse_azure.py  lab_trace_langfuse_crewai_azure.py
agentic-ai/: pyproject.toml
agentic-ai/module-2/example-1/: M2_UGL_1.ipynb  M2_UGL_1.py  M2_UGL_1_langgraph.py
claude-code-a-highly-agentic-coding-assistant/1_lab/: prompt.txt  visualization.html
claude-code-a-highly-agentic-coding-assistant/2_lab/: log.txt  prompts.txt
claude-code-a-highly-agentic-coding-assistant/2_lab/starting-ragchatbot-codebase/: query_flow_diagram.html  query_flow_diagram.md
jupyter-ai-coding-in-notebooks/: DEVELOPER_GUIDE.md  README.md  main.py  pyproject.toml
jupyter-ai-coding-in-notebooks/community/exercise-2/: L2 - Book Research Assistant Final.ipynb
jupyter-ai-coding-in-notebooks/exercise-1/: Chat 1.chat  Chat 2.chat  Chat 3.chat  Chat 4.chat  L1 - Coding with Jupyter AI Lab.ipynb  L1 - Coding with Jupyter AI.ipynb  customer_reviews.md
jupyter-ai-coding-in-notebooks/exercise-2/: L2 - Book Research Assistant.ipynb
jupyter-ai-coding-in-notebooks/exercise-3/: L3 - Exploring Stock Data Lab.ipynb  L3 - Exploring Stock Data.ipynb
linear-algebra-for-machine-learning-and-data-science/: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
linear-algebra-for-machine-learning-and-data-science/.claude/: PROMPTS.md  settings.local.json
linear-algebra-for-machine-learning-and-data-science/.claude/commands/: render-latex.md  run-code.md  (+1 more)
linear-algebra-for-machine-learning-and-data-science/week-1/: README.md
(+7 files in other folders)
