[project]
name = "agentic-ai"
version = "1.0.0"
description = "Agentic AI Course"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.71.0",
    "ipython>=9.6.0",
    "langchain>=1.0.0",
    "langchain-anthropic>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-openai>=1.0.0",
    "langgraph>=1.0.0",
    "matplotlib>=3.10.7",
    "openai>=2.5.0",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "python-dotenv>=1.1.1",
]
