[project]
name = "jupyter-ai-coding-in-notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "ipykernel>=6.0.0",
    "pandas>=2.0.0",
    "nbformat>=5.0.0",
    "nbconvert>=7.0.0",
    "requests>=2.31.0",
    "aisuite>=0.1.0",
    "yfinance>=0.2.0",
    "matplotlib>=3.0.0",
]
